@@ -1,5 +1,6 @@
 package com.example.starrail.controller;
 
+import com.example.starrail.entity.RelicFitDetail;
 import com.example.starrail.entity.RelicFitQuery;
 import com.example.starrail.po.RelicEntity;
 import com.example.starrail.po.RelicFit;
@@ -7,12 +8,15 @@ import com.example.starrail.po.StarRailCharacter;
 import com.example.starrail.service.ConvertService;
 import com.example.starrail.service.RelicCheckService;
 import com.example.starrail.service.RelicFitService;
+import com.example.starrail.vo.RelicEntityVO;
 import com.example.starrail.vo.RelicFitReq;
 import com.example.starrail.vo.RelicFitDetailVO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -79,14 +83,28 @@ public class RelicFitController {
         return true;
     }
 
-    @GetMapping("/list")
-    public String getRelicFitPage() {
+    @GetMapping("/home")
+    public String getRelicFitHomePage() {
         return "html/relic-fit-list";
     }
 
-    @GetMapping("/api/list")
+    @PostMapping("/api/list")
     @ResponseBody
     public List<RelicFitDetailVO> getRelicFitList(@RequestBody RelicFitReq req) {
-        return relicFitService.getDetailByQuery(convertService.toQuery(req)).stream().map(convertService::toVO).collect(Collectors.toList());
+        List<RelicFitDetailVO> relicFitDetailVOList = new java.util.ArrayList<>(relicFitService
+                .getDetailByQuery(convertService.toQuery(req)).stream().map(convertService::toVO).
+                filter(RelicFitDetailVO::highFit).toList());
+        Collections.sort(relicFitDetailVOList);
+        return relicFitDetailVOList;
+    }
+
+    @PostMapping("/api/relic-check")
+    @ResponseBody
+    public List<RelicFitDetailVO> checkFitByRelic(@RequestBody RelicEntityVO relicEntityVO) {
+        List<StarRailCharacter> characterList = convertService.toCharacterList(Collections.singletonList("all"));
+        List<RelicEntity> relicEntityList = Collections.singletonList(convertService.toPO(relicEntityVO));
+        List<RelicFitDetailVO> result = new java.util.ArrayList<>(relicCheckService.genRelicFit(characterList, relicEntityList).stream().map(convertService::toVO).toList());
+        Collections.sort(result);
+        return result;
     }
 }
